Add an API endpoint changing password
