# MealPlan/Controllers/IdentityController.cs
@@ -27,4 +27,12 @@ public class IdentityController : ControllerBase
         }
         return Unauthorized();
     }
+
+    [HttpPut("Password")]
+    [ProducesResponseType(StatusCodes.Status204NoContent)]
+    [ProducesResponseType(typeof(List<string>), StatusCodes.Status400BadRequest)]
+    public async Task<ActionResult<List<string>>> ChangePassword(ChangePasswordDto dto)
+    {
+        return Ok();
+    }
 }
