# MealPlan/DTOs/Identity/ChangePasswordDto.cs
@@ -1,0 +1,7 @@
+namespace MealPlan.DTOs.Identity;
+
+public class ChangePasswordDto
+{
+    public string OldPassword { get; set;} = "";
+    public string NewPassword { get; set;} = "";
+}
